--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: othr_slider
-description: "A customizable slider."
+description: "A highly customizable range slider."
 version: 0.0.1
 homepage: https://github.com/OscrTR/OthrSlider
 
