--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: othr_slider
-description: "A highly customizable range slider."
+description: "A highly customizable range slider that allows you to control every aspect of the slider's appearance, including track, thumb, overlay, and label configuration."
 version: 0.0.1
 homepage: https://github.com/OscrTR/OthrSlider
 
